bluec-tests/tests/valid/decl_var/multiple_declarators_3.c
int main(void) {
    int a = 1, b = a + 1, c = b + 2;
    return c;
}